--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "ionic": "driftyco/ionic-bower#1.3.1"
   },
   "dependencies": {
-    "moment": "^2.14.1"
+    "moment": "^2.14.1",
+    "localforage": "^1.4.2",
+    "localforage-cordovasqlitedriver": "localForage-cordovaSQLiteDriver#^1.4.2"
   }
 }
